compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__equivalence_of_subprogram_formals_err_too_many.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type t_p : procedure(a, b : int, var c : string)\nprocedure p(a, b, k : int, var c : string) end p\n\nvar _ : t_p := p\n"
---
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 21..22) [Param(Value, No)]: <error>
"b"@(FileId(1), 24..25) [Param(Value, No)]: <error>
"c"@(FileId(1), 37..38) [Param(Reference(Var), No)]: <error>
"t_p"@(FileId(1), 5..8) [Type]: alias[DefId(LibraryId(0), LocalDefId(4))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"p"@(FileId(1), 59..60) [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"a"@(FileId(1), 61..62) [Param(Value, No)]: int
"b"@(FileId(1), 64..65) [Param(Value, No)]: int
"k"@(FileId(1), 67..68) [Param(Value, No)]: int
"c"@(FileId(1), 80..81) [Param(Reference(Var), No)]: string
"_"@(FileId(1), 103..104) [ConstVar(Var, No)]: alias[DefId(LibraryId(0), LocalDefId(4))] of procedure ( pass(value) int, pass(value) int, pass(var ref) string, ) -> void
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 114..115: mismatched types
| note in file FileId(1) for 114..115: this is of type `procedure (int, int, int, var : string)`
| note in file FileId(1) for 107..110: this is of type `t_p (alias of procedure (int, int, var : string))`
| info: `procedure (int, int, int, var : string)` is not assignable into `procedure (int, int, var : string)`
