compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__equivalence_of_subprogram_result.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type fa : function () : int\nfunction fb () : int end fb\n\nvar _ : fa := fb\n"
---
"<unnamed>"@(dummy) [Undeclared]: <error>
"fa"@(FileId(1), 5..7) [Type]: alias[DefId(LibraryId(0), LocalDefId(1))] of function ( ) -> int
"fb"@(FileId(1), 37..39) [Subprogram(Function)]: function ( ) -> int
"<unnamed>"@(dummy) [Undeclared]: <error>
"_"@(FileId(1), 61..62) [ConstVar(Var, No)]: alias[DefId(LibraryId(0), LocalDefId(1))] of function ( ) -> int
"<root>"@(dummy) [Module(No)]: <error>

