compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__equivalence_of_subprogram_result_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "type fa : function () : int1\nfunction fb () : int end fb\n\nvar _ : fa := fb\n"
---
"<unnamed>"@(dummy) [Undeclared]: <error>
"fa"@(FileId(1), 5..7) [Type]: alias[DefId(LibraryId(0), LocalDefId(1))] of function ( ) -> int1
"fb"@(FileId(1), 38..40) [Subprogram(Function)]: function ( ) -> int
"<unnamed>"@(dummy) [Undeclared]: <error>
"_"@(FileId(1), 62..63) [ConstVar(Var, No)]: alias[DefId(LibraryId(0), LocalDefId(1))] of function ( ) -> int1
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 72..74: mismatched types
| note in file FileId(1) for 72..74: this is of type `function () : int`
| note in file FileId(1) for 66..68: this is of type `fa (alias of function () : int1)`
| info: `function () : int` is not assignable into `function () : int1`
