compiler/toc_analysis/src/typeck/snapshots/toc_analysis__typeck__test__integer_inference_identity.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "\n    % Inferred integer types should pass\n    % Decl should be a concrete type\n    var a := + 1\n    % Types of operands should make the type concrete\n    var r : real\n    var i : int\n    var n : nat\n    var _r0 := + r\n    var _i0 := + i\n    var _n0 := + n\n"

---
ty_nodes:
    TypeId(HirId(Idx::<HirNode>(3))) TyRef(Real(Real))
    TypeId(HirId(Idx::<HirNode>(5))) TyRef(Int(Int))
    TypeId(HirId(Idx::<HirNode>(7))) TyRef(Nat(Nat))
def_kinds:
    DefId(0) Var(TyRef(Int(Int)))
    DefId(1) Var(TyRef(Real(Real)))
    DefId(2) Var(TyRef(Int(Int)))
    DefId(3) Var(TyRef(Nat(Nat)))
    DefId(4) Var(TyRef(Real(Real)))
    DefId(5) Var(TyRef(Int(Int)))
    DefId(6) Var(TyRef(Nat(Nat)))
